--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 
         function createEmojiConfetti() {
             const container = document.querySelector('.container');
-            const emojis = ['🎉', '✨', '💊', '🧬', '🩺', '🩼', '🩹', '💉','🎉', '✨', '💊', '🧬', '🩺', '🩼', '🩹', '💉','🎉', '✨', '💊', '🧬', '🩺', '🩼', '🩹', '💉'];
+            const emojis = ['🎉', '✨', '💊', '🧬', '🩺', '🩼', '🩹', '💉', '🎈', '🎂', '🎁', '🥳', '🍰', '🎊', '🍾', '🥂', '🧫', '🧪', '🧻'];
             
             // Create emoji confetti
             for (let i = 0; i < 20; i++) {
